fix: openapi apiKey; add: readme
